# nnd

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  doc.txt  profiling.txt  release.sh  strategy_post_draft.txt  to_investigate  todo  tui_sketch.rs
.cargo/: config.toml
examples/: README.md
other_things/: cpuid.c  debug_registers_experiment.c  echo_input  echo_input.c  expr_sketch.rs  interp_sketch.rs  load_symbols.rs  poketext_experiment.cpp  pretty.txt  profiling.txt  questions_to_debugger_people.txt  singlestep_vs_group_stop  singlestep_vs_group_stop.cpp  some_dwarf_stats.txt  tui_sketch.rs  ui_prototype.rs  varint_benchmark.c
src/: .#ui.rs  arena.rs  common_ui.rs  context.rs  core_dumper.rs  debugger.rs  disassembly.rs  doc.rs  dwarf.rs  elf.rs  error.rs  executor.rs  expr.rs  imgui.rs  interp.rs  layout.rs  lib.rs  license.rs  log.rs  main.rs  os.rs  persistent.rs  pool.rs  pretty.rs  process_info.rs  procfs.rs  range_index.rs  registers.rs  search.rs  settings.rs  symbols.rs  symbols_registry.rs  term_emu.rs  terminal.rs  types.rs  ui.rs  unwind.rs  util.rs  version.rs  widgets.rs
testprogs/: anon_types.cpp  arrays  arrays-libc++  arrays.cpp  bad_function_call.c  build.sh  containers.cpp  containers_rs.rs  containers_zig.zig  exception.cpp  file_read.c  function_and_member_pointers.cpp  global_variables.cpp  its_a_trap.c  many_threads.cpp  panic.rs  self_reference  self_reference-libc++  self_reference.cpp  signal_handler_with_threads  signal_handler_with_threads-libc++  signal_handler_with_threads.c  simple_async_rs.rs  simple_codegen.c  simple_containers.cpp  simple_coro  simple_coro-libc++  simple_coro.cpp  simple_inline  simple_inline-libc++  simple_inline.c  simple_loop  simple_loop-libc++  simple_loop.cpp  simple_mutex  simple_mutex-libc++  simple_mutex.cpp  simple_recursion  simple_recursion-libc++  simple_recursion.c  (+27 more)
testprogs/absl/: CMakeLists.txt  build.sh  containers.cpp
testprogs/dlopen/: build.sh  dl.c  main.c
testprogs/types_across_units/: a.c  b.c  build.sh  main  main.c  p.h
